--- a/ReactRestCountriesAPI/package.json
+++ b/ReactRestCountriesAPI/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://thekatarius.github.io/Portfolio/ReactRestCountriesAPI",
 	"name": "reactrestcountriesapi",
 	"version": "0.1.0",
 	"private": true,
@@ -10,6 +11,8 @@
 		"react-scripts": "5.0.1"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -32,5 +35,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^5.0.0"
 	}
 }
